# extreme-carpaccio

./: .gitignore  .travis.yml  LICENSE  README-FR.md  README.md  app.js  package.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: cmake.yml  on-all-prs.yml  on-prs-made-against-the-server.yml
clients/: README-FR.md  README.md
clients/c#/: extreme-carpaccio.client.sln  katazon.client.sln
clients/c#/NancyApplication1/: IndexModule.cs  NancyApplication1.csproj  Program.cs
clients/c#/NancyApplication1/Properties/: AssemblyInfo.cs
clients/c#/NancyApplication1/Views/: index.sshtml
clients/c#/coreWebApi/: Dockerfile  readme.md
clients/c#/dnx-csharp/: README.md  build.sh  global.json  watch-tests.sh
clients/c#/extreme-carpaccio.client/: Bootstrapper.cs  Feedback.cs  IndexModule.cs  Program.cs  extreme-carpaccio.client.csproj
clients/c#/katazon.client/: Bootstrapper.cs  IndexModule.cs  Program.cs  katazon.client.csproj
clients/c#/katazon.client/Views/: index.sshtml
clients/c#/nancy/: README.md
clients/clojure/: .gitignore  README.md  project.clj
clients/clojure/src/: user.clj
clients/cpp/: .gitignore  CMakeLists.txt  README.md  Retrospective.md  TODOLIST.md  cpp_easy_setup.bat  cpp_easy_setup.sh  pull-push.sh  watch.sh
clients/cpp/Client/: CMakeLists.txt
clients/cpp/Client/executable/: CMakeLists.txt
clients/cpp/Client/executable/sources/: main.cpp
clients/cpp/OrderManagement/: CMakeLists.txt
clients/cpp/OrderManagement/includes/extreme_carpaccio/order_management/: Order.hpp  OrderParsing.hpp  TotalAmount.hpp  config.hpp
clients/cpp/OrderManagement/sources/extreme_carpaccio/order_management/: Order.cpp  OrderParsing.cpp  TotalAmount.cpp
clients/cpp/OrderManagement/tests/: CMakeLists.txt
clients/cpp/OrderManagement/tests/sources/: OrderParsingTests.cpp  TotalAmountTests.cpp
clients/cpp/cmake/: CPM.cmake  FindBoost.cmake  FindCurl.cmake  FindGoogleTest.cmake  FindHttpClient.cmake  FindNlohmannJson.cmake
clients/cpp/include/extreme_carpaccio_client/: ExtremeCarpaccioClient.hpp  Order.hpp
clients/cpp/src/: main.cpp
clients/cpp/src/extreme_carpaccio_client/: ExtremeCarpaccioClient.cpp  HTTPConfig.hpp  Order.cpp
clients/cpp/test/: ExtremeCarpaccioClientTest.cpp
clients/d/: .gitignore  README.md  dub.json  dub.selections.json
clients/d/source/: app.d  utils.d
clients/dnx-csharp/: .gitignore  NuGet.config  README.md  watch-web.sh
clients/erlang/: README.md  rebar.config
clients/erlang-alt/: .gitignore  README.md
clients/erlang-alt/src/: json_utils.erl  xcarpaccio.app.src  xcarpaccio.erl  xcarpaccio_sup.erl  xcarpaccio_webhandler.erl
clients/erlang-alt/test/: jsx_usage_test.erl
clients/erlang/src/: xcarpaccio_app.erl
clients/erlang/test/: jsx_usage_test.erl
clients/f#/: .gitignore  README.md  extreme-carpaccio.client.sln  extreme-carpaccio.sln  paket.dependencies
clients/f#/carpaccio-client/: carpaccio-client.fs  carpaccio-client.fsproj  carpaccio-model.fs  paket.references
clients/f#/extreme-carpaccio.client/: Program.fs  extreme-carpaccio.client.fsproj  packages.config
clients/go/: carpaccio.go  main.go  manifest.yml
clients/groovy/groovy-ratpack/: .gitignore  README.md  build.gradle
clients/haskell/: README.md  carpaccio.cabal  tdd.sh
clients/haskell/src/: Main.hs  Model.hs
clients/haskell/test/: Spec.hs
clients/java/: README.md  pom.xml
clients/java-spark/: README.md  pom.xml
clients/java/java-fluent-http/: README.md  pom.xml
clients/java/java-httpserver/: .gitignore  README.md  manifest.yml  pom.xml
clients/java/java-spark/: pom.xml
clients/java/java-springboot/: pom.xml
clients/javascript/: conf.js  package.json
clients/javascript/express/: README.md  package-lock.json  package.json  server.js
clients/javascript/lib/: server.js
clients/javascript/node-plain/: main.js  package.json
clients/javascript/specs/: server_spec.js
clients/kotlin/: .gitignore  README.md  build.gradle  settings.gradle
clients/nodejs/: README.md  app.js  main.js  manifest.yml  package-lock.json  package.json
clients/nodejs/routes/: feedback.js  index.js  order.js
clients/php/native/: .bootstrap.atoum.php  .gitignore  Makefile  README.md  composer.json  docker-compose.yml
clients/php/silex/: .atoum.php  Makefile  README.md  behat.yml  composer.json  docker-compose.yml
clients/php/socket/: .gitignore  README.md  composer.json
clients/python/client/: __init__.py
clients/python/flask-server/: README.md  __main__.py
clients/python/simple-server/: README.md
clients/python/simple-server-python3/: README.md  __main__.py
clients/python/tests/: ServerHandlerTest.py
clients/racket/: README.md  carpaccio.rkt  web-server.rkt
clients/ruby/: README.md  extreme-carpaccio.rb
clients/ruby/rails/: Gemfile  readme.md
clients/ruby/ruby-rails/: Gemfile
clients/ruby/tests/: test_exterme-carpaccio.rb
clients/rust/: Cargo.toml
clients/rust/src/: main.rs
clients/scala/: .gitignore  README.md  build.sbt
clients/scala/project/: Dependencies.scala
clients/typescript/: package-lock.json  package.json  tsconfig.json
clients/typescript/src/: calc.spec.ts  example.spec.ts  logic.spec.ts  logic.ts  server.ts
javascripts/: repositories.js  routes.js  routes.js.orig  services.js  services.js.orig  utils.js  utils.js.orig
public/javascripts/: services.js
routes/: index.js  sellers.js  server.js
server/: README-FR.md  README.md  app.js  bower.json  configuration.json  manifest.yml  package-lock.json  package.json
server/javascripts/: config.js  repositories.js  routes.js  services.js  services.js.orig  utils.js
server/javascripts/services/: dispatcher.js  index.js  order.js  reduction.js  seller.js
server/public/: index.html  seller.js
server/public/javascripts/: seller.js
server/specs/: app_integration_spec.js  config_spec.js  investigating_spec.js  repositories_spec.js  services_spec.js  utils_spec.js
server/views/: index.html  index.jade  sellers.jade
specs/: katazon_spec.js  repositories_spec.js  services_spec.js
views/: sellers.jade  sellers.jade.orig
(+154 files in other folders)
